--- a/node-red-i8c-cumulocity/config_cumulocity_tenant/config_cumulocity_tenant.html
+++ b/node-red-i8c-cumulocity/config_cumulocity_tenant/config_cumulocity_tenant.html
@@ -1,21 +1,21 @@
 <script type="text/javascript">
-    RED.nodes.registerType('cumulocity-tenant',{
-        category: 'cumulocity',
+    RED.nodes.registerType('config-cumulocity-tenant',{
+        category: 'config',
         defaults: {
             host: {value:"localhost",required:true},
-            port: {value:1234,required:true,validate:RED.validators.number()},
-			credentials: {
-				username: {type:"text"},
-				password: {type:"password"}
-			},
+            port: {value:443,required:true,validate:RED.validators.number()},
         },
+		credentials: {
+				user: {type:"text"},
+				password: {type: "password"}
+		},
         label: function() {
             return this.host+":"+this.port;
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="cumulocity-tenant">
+<script type="text/x-red" data-template-name="config-cumulocity-tenant">
     <div class="form-row">
         <label for="node-config-input-host"><i class="icon-bookmark"></i> Host</label>
         <input type="text" id="node-config-input-host">
@@ -25,11 +25,11 @@
         <input type="text" id="node-config-input-port">
     </div>
 	<div class="form-row">
-		<label for="node-input-username"><i class="icon-tag"></i> Username</label>
-		<input type="text" id="node-input-username">
+		<label for="node-config-input-user"><i class="fa fa-user"></i> Username</label>
+		<input type="text" id="node-config-input-user">
 	</div>
 	 <div class="form-row">
-		<label for="node-input-password"><i class="icon-tag"></i> Password</label>
-		<input type="password" id="node-input-password">
+		<label for="node-config-input-password"><i class="fa fa-lock"></i> Password</label>
+		<input type="password" id="node-config-input-password">
 	 </div>
 </script>
