--- a/node-red-i8c-cumulocity/api_get_credentials/api_get_credentials.html
+++ b/node-red-i8c-cumulocity/api_get_credentials/api_get_credentials.html
@@ -4,7 +4,6 @@
         color: '#a6bbcf',
         defaults: {
             name: {value:""},
-			deviceCredentials: {value:""},
 			tenant: {value:"", type:"config-cumulocity-tenant"}
         },
         inputs:1,
@@ -22,10 +21,6 @@
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
-	<div class="form-row">
-        <label for="node-input-deviceCredentials"><i class="icon-tag"></i> Device Credentials</label>
-        <input type="text" id="node-input-deviceCredentials" placeholder="Device Credentials">
-    </div>
 	 <div class="form-row">
         <label for="node-input-tenant"><i class="icon-tag"></i> Tenant</label>
         <input type="text" id="node-input-tenant" placeholder="Tenant">
@@ -33,5 +28,35 @@
 </script>
 
 <script type="text/x-red" data-help-name="api-get-credentials">
-    <p>A node that registers device credentials on your cumulocity tenant</p>
+<p>This node calls the get device credentials operation</p>
+
+<h3>Inputs</h3>
+    <dl class="message-properties">
+        <dt class="optional">Name <span class="property-type">string</span></dt>
+        <dd> Name for this node.</dd>
+		<dt>Tenant <span class="property-type">configuration</span></dt>
+        <dd> Tenant Configuration Object that contains the connection information for this tenant </dd>
+    </dl>
+
+ <h3>Outputs</h3>
+	<dl class="message-properties">
+		<dt>data <span class="property-type">json</span></dt>
+		<dd>The response of the call (if any)</dd>
+		<dt>statusCode <span class="property-type">string</span></dt>
+		<dd>The statusCode of the call</dd>
+		<dt>statusMessage <span class="property-type">string</span></dt>
+		<dd>The statusMessage of the call</dd>
+		<dt>location <span class="property-type">json</span></dt>
+		<dd>The reference location response of the call (if any)</dd>
+	</dl>
+
+<h3>Details</h3>
+    <p>This node will call the get device credentials operation on the REST API.</p>
+
+<h3>References</h3>
+    <ul>
+		<li><a href="https://www.cumulocity.com/guides/rest/device-integration/#step-0-request-device-credentials">Device credentials</a> - Cumulocity docs</li>
+	    <li><a href="https://github.com/i8c">GitHub Project</a> - i8c-c8y-nodered</li>
+        <li><a href="https://www.cumulocity.com/guides/rest/device-integration/">Cumulocity REST API docs</a></li>
+    </ul>
 </script>
