--- a/node-red-i8c-cumulocity/api_put_control_op/api_put_control_op.html
+++ b/node-red-i8c-cumulocity/api_put_control_op/api_put_control_op.html
@@ -38,5 +38,39 @@
 </script>
 
 <script type="text/x-red" data-help-name="api-put-control-op">
-    <p>A node that puts a status of an operation control</p>
+<p>This node calls the update control-operation operation</p>
+
+<h3>Inputs</h3>
+    <dl class="message-properties">
+        <dt class="optional">Name <span class="property-type">string</span></dt>
+        <dd> Name for this node.</dd>
+		<dt class="optional">OperationId <span class="property-type">json</span></dt>
+        <dd> Id of the operation. Could also come from <code>msg.operationId</code> </dd>
+		<dt class="optional">Operation <span class="property-type">json</span></dt>
+        <dd> Operation data used to update the control operation (see reference). Could also come from <code>msg.operation</code> </dd>		
+		<dt>Tenant <span class="property-type">configuration</span></dt>
+        <dd> Tenant Configuration Object that contains the connection information for this tenant </dd>
+    </dl>
+
+ <h3>Outputs</h3>
+	<dl class="message-properties">
+		<dt>data <span class="property-type">json</span></dt>
+		<dd>The response of the call (if any)</dd>
+		<dt>statusCode <span class="property-type">string</span></dt>
+		<dd>The statusCode of the call</dd>
+		<dt>statusMessage <span class="property-type">string</span></dt>
+		<dd>The statusMessage of the call</dd>
+		<dt>location <span class="property-type">json</span></dt>
+		<dd>The reference location response of the call (if any)</dd>
+	</dl>
+
+<h3>Details</h3>
+    <p>This node will call the update control-operation operation on the REST API.</p>
+
+<h3>References</h3>
+    <ul>
+		<li><a href="https://www.cumulocity.com/guides/rest/device-integration/#step-6-finish-operations-and-subscribe">Notifications (/devicecontrol/operations/{id})</a> - Cumulocity docs</li>
+	    <li><a href="https://github.com/i8c">GitHub Project</a> - i8c-c8y-nodered</li>
+        <li><a href="https://www.cumulocity.com/guides/rest/device-integration/">Cumulocity REST API docs</a></li>
+    </ul>
 </script>
