--- a/node-red-i8c-cumulocity/api_reg_control_notif/api_reg_control_notif.html
+++ b/node-red-i8c-cumulocity/api_reg_control_notif/api_reg_control_notif.html
@@ -33,5 +33,37 @@
 </script>
 
 <script type="text/x-red" data-help-name="api-reg-control-notif">
-    <p>A node that creates the device in the inventory of your cumulocity tenant</p>
+<p>This node calls the register control notification operation</p>
+
+<h3>Inputs</h3>
+    <dl class="message-properties">
+        <dt class="optional">Name <span class="property-type">string</span></dt>
+        <dd> Name for this node.</dd>
+		<dt class="optional">Notifications <span class="property-type">json</span></dt>
+        <dd> Notification data used to subscribe (see reference). Could also come from <code>msg.managedObjectId</code> </dd>
+		<dt>Tenant <span class="property-type">configuration</span></dt>
+        <dd> Tenant Configuration Object that contains the connection information for this tenant </dd>
+    </dl>
+
+ <h3>Outputs</h3>
+	<dl class="message-properties">
+		<dt>data <span class="property-type">json</span></dt>
+		<dd>The response of the call (if any)</dd>
+		<dt>statusCode <span class="property-type">string</span></dt>
+		<dd>The statusCode of the call</dd>
+		<dt>statusMessage <span class="property-type">string</span></dt>
+		<dd>The statusMessage of the call</dd>
+		<dt>location <span class="property-type">json</span></dt>
+		<dd>The reference location response of the call (if any)</dd>
+	</dl>
+
+<h3>Details</h3>
+    <p>This node will call the register control notification operation on the REST API.</p>
+
+<h3>References</h3>
+    <ul>
+		<li><a href="https://www.cumulocity.com/guides/rest/device-integration/#step-6-finish-operations-and-subscribe">Notifications (/devicecontrol/notifications)</a> - Cumulocity docs</li>
+	    <li><a href="https://github.com/i8c">GitHub Project</a> - i8c-c8y-nodered</li>
+        <li><a href="https://www.cumulocity.com/guides/rest/device-integration/">Cumulocity REST API docs</a></li>
+    </ul>
 </script>
