--- a/node-red-i8c-cumulocity/api_register_device/api_register_device.html
+++ b/node-red-i8c-cumulocity/api_register_device/api_register_device.html
@@ -38,5 +38,39 @@
 </script>
 
 <script type="text/x-red" data-help-name="api-register-device">
-    <p>A node that registers the device id in your cumulocity tenant</p>
+<p>This node calls the register device operation</p>
+
+<h3>Inputs</h3>
+    <dl class="message-properties">
+        <dt class="optional">Name <span class="property-type">string</span></dt>
+        <dd> Name for this node.</dd>
+		<dt class="optional">ManagedObjectID <span class="property-type">string</span></dt>
+        <dd> The Id that is registered for this managed object (device). Could also come from <code>msg.managedObjectId</code> </dd>
+        <dt class="optional">External Id <span class="property-type">string</span></dt>
+        <dd> External id of the device <code>msg.externalId</code> </dd>
+		<dt>Tenant <span class="property-type">configuration</span></dt>
+        <dd> Tenant Configuration Object that contains the connection information for this tenant </dd>
+    </dl>
+
+ <h3>Outputs</h3>
+	<dl class="message-properties">
+		<dt>data <span class="property-type">json</span></dt>
+		<dd>The response of the call (if any)</dd>
+		<dt>statusCode <span class="property-type">string</span></dt>
+		<dd>The statusCode of the call</dd>
+		<dt>statusMessage <span class="property-type">string</span></dt>
+		<dd>The statusMessage of the call</dd>
+		<dt>location <span class="property-type">json</span></dt>
+		<dd>The reference location response of the call (if any)</dd>
+	</dl>
+
+<h3>Details</h3>
+    <p>This node will call the send measure operation on the REST API.</p>
+
+<h3>References</h3>
+    <ul>
+		<li><a href="https://www.cumulocity.com/guides/rest/device-integration/#step-3-register-the-device">Register device</a> - Cumulocity docs</li>
+	    <li><a href="https://github.com/i8c">GitHub Project</a> - i8c-c8y-nodered</li>
+        <li><a href="https://www.cumulocity.com/guides/rest/device-integration/">Cumulocity REST API docs</a></li>
+    </ul>
 </script>
