--- a/node-red-i8c-cumulocity/base_reg_control/base_reg_control.html
+++ b/node-red-i8c-cumulocity/base_reg_control/base_reg_control.html
@@ -33,5 +33,34 @@
 </script>
 
 <script type="text/x-red" data-help-name="base-reg-control">
-    <p>A node that registers the managedObject to receive control operations</p>
+<p>This component will register this device to receive control operations</p>
+
+<h3>Inputs</h3>
+    <dl class="message-properties">
+        <dt class="optional">Name <span class="property-type">string</span></dt>
+        <dd> Name for this node.</dd>
+        <dt class="optional">ManagedObjectID <span class="property-type">string</span></dt>
+        <dd> The Id that is registered for this managed object (device). Could also come from <code>msg.managedObjectId</code> </dd>
+		<dt>Tenant <span class="property-type">configuration</span></dt>
+        <dd> Tenant Configuration Object that contains the connection information for this tenant </dd>
+    </dl>
+
+ <h3>Outputs</h3>
+	<dl class="message-properties">
+		<dt>id <span class="property-type">string</span></dt>
+		<dd>The id of the control operation</dd>
+	</dl>
+
+<h3>Details</h3>
+    <p>This node will register itself and start listening for control operations.
+	When an control operation comes in, the output will be triggered and you should set the status of the operation according to the progress.
+	You can use the api-put-control-op node for this.
+	To know what data you get from the control operation see the references</p>
+
+<h3>References</h3>
+    <ul>
+		<li><a href="https://www.cumulocity.com/guides/reference/device-control#operation">Operation</a> - Cumulocity docs</li>
+	    <li><a href="https://github.com/i8c">GitHub Project</a> - i8c-c8y-nodered</li>
+        <li><a href="https://www.cumulocity.com/guides/rest/device-integration/">Cumulocity REST API docs</a></li>
+    </ul>
 </script>
