added first example fixed minor doc error

--- a/node-red-i8c-cumulocity/base_reg_device/base_reg_device.html
+++ b/node-red-i8c-cumulocity/base_reg_device/base_reg_device.html
@@ -61,7 +61,7 @@
 
  <h3>Outputs</h3>
 	<dl class="message-properties">
-		<dt>id <span class="property-type">string</span></dt>
+		<dt>managedObjectId <span class="property-type">string</span></dt>
 		<dd>The id of the registered managed object</dd>
 	</dl>
 
